--- a/templates/forest.html
+++ b/templates/forest.html
@@ -1,49 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../static/style.css" />
+  </head>
+  <body>
+    <h1>Check your insurance premium</h1>
     <form action="/predict" method="POST">
-        <label>
-            Age
-            <input type="text" name="age"/>
-        </label>
-        <label>
-            Sex
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Age</div>
+          <div class="col-6">
+            <input type="text" name="age" />
+          </div>
+        </div>
+      </label>
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Sex</div>
+          <div class="col-6">
             <select name="sex">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
+              <option value="male">Male</option>
+              <option value="female">Female</option>
             </select>
-        </label>
-        <label>
-            Bmi
-            <input type="text" name="bmi"/>
-        </label>
-        <label>
-            Children
-            <input type="text" name="children"/>
-        </label>
-        <label>
-            Smoker
+          </div>
+        </div>
+      </label>
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Bmi</div>
+          <div class="col-6">
+            <input type="text" name="bmi" />
+          </div>
+        </div>
+      </label>
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Children</div>
+          <div class="col-6">
+            <input type="text" name="children" />
+          </div>
+        </div>
+      </label>
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Smoker</div>
+          <div class="col-6">
             <select name="smoker">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
+              <option value="yes">Yes</option>
+              <option value="no">No</option>
             </select>
-        </label>
-        <label>
-            Region
+          </div>
+        </div>
+      </label>
+      <label>
+        <div class="row justify-content-center">
+          <div class="col-2">Region</div>
+          <div class="col-6">
             <select name="region">
-                <option value="southeast">Southeast</option>
-                <option value="southwest">Southwest</option>
-                <option value="northeast">Northeast</option>
-                <option value="northwest">Northwest</option>
+              <option value="southeast">Southeast</option>
+              <option value="southwest">Southwest</option>
+              <option value="northeast">Northeast</option>
+              <option value="northwest">Northwest</option>
             </select>
-        </label>
-        <button type="submit">Check</button>
+          </div>
+        </div>
+      </label>
+      <button type="submit" class="btn btn-primary btn-lg">Check</button>
     </form>
-    <h1>{{info}}</h1>
-</body>
+    <h3>{{info}}</h3>
+  </body>
 </html>
