--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,62 @@
-label,button{
-    display: block !important;
-    margin: 2% auto;
-    text-align: center !important;
+label,
+button {
+  display: block ;
+  margin: 2% auto;
+  /* text-align: center !important; */
 }
-input,select{
-    width: 100%;
+input,
+select {
+  width: 100%;
 }
-body{
-    padding: 5%;
+body {
+  padding: 5%;
+  background: url('./bg.jpeg');
+  background-repeat: no-repeat ;
+  background-size: cover;
 }
-h1,h3{
-    text-align: center;
+h1,
+h3 {
+  color: #fff;
+  text-align: center;
+}
+label{
+    font-weight: 600;
+}
+form {
+  padding: 3%;
+  border-radius: 16px;
+  color: #fff;
+  border-radius: 16px;
+  margin-right: 30%;
+  margin-top: 6%;
+  text-align: left;
+}
+input,select {
+  width: 100%;
+  color: #fff;
+  border-width: 0;
+  border-radius: 0;
+  border-color: #fff;
+  border-bottom-width: 1px;
+  background-color: rgba(255, 255, 255, 0);
+}
+input::placeholder {
+  color: #fff;
+}
+input:focus,select:focus {
+  outline: none !important;
+  box-shadow: none;
+  background-color: rgba(255, 255, 255, 0);
+  caret-color: #fff;
+  color: #fff;
+  border-bottom-width: 2px;
+}
+input:disabled,select:disabled{
+  opacity: 0.25 ;
+  background-color: #fff;
+}
+.redirect,button.btn{
+  display: block;
+  margin: 0 auto;
+  width: max-content;
 }
