--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div class="row ">
           <div class="col-2">Age</div>
           <div class="col-6">
-            <input type="text" name="age" />
+            <input type="number" name="age" />
           </div>
         </div>
       </label>
@@ -37,7 +37,7 @@
         <div class="row ">
           <div class="col-2">Bmi</div>
           <div class="col-6">
-            <input type="text" name="bmi" />
+            <input type="number" name="bmi" step="0.1">
           </div>
         </div>
       </label>
@@ -45,7 +45,7 @@
         <div class="row ">
           <div class="col-2">Children</div>
           <div class="col-6">
-            <input type="text" name="children" />
+            <input type="number" name="children" />
           </div>
         </div>
       </label>
