--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div class="row ">
           <div class="col-2">Age</div>
           <div class="col-6">
-            <input type="number" name="age" />
+            <input type="number" name="age" min="3" required/>
           </div>
         </div>
       </label>
@@ -26,7 +26,7 @@
         <div class="row ">
           <div class="col-2">Sex</div>
           <div class="col-6">
-            <select name="sex">
+            <select name="sex" >
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
@@ -37,7 +37,7 @@
         <div class="row ">
           <div class="col-2">Bmi</div>
           <div class="col-6">
-            <input type="number" name="bmi" step="0.1">
+            <input type="number" name="bmi" min="0" step="0.1" required>
           </div>
         </div>
       </label>
@@ -45,7 +45,7 @@
         <div class="row ">
           <div class="col-2">Children</div>
           <div class="col-6">
-            <input type="number" name="children" />
+            <input type="number" name="children" required  min="0"/>
           </div>
         </div>
       </label>
@@ -78,20 +78,20 @@
     </form>
     <h3>{{info}}</h3>
     <script>
-        console.log(window.location.href);
-        console.log(window.location.href.search('predict'));
-        if(window.location.href.search('predict') == -1){
-          document.querySelectorAll('input').forEach((item)=>{
-            item.setAttribute("disabled","true");
-          })
-          document.querySelectorAll('select').forEach((item)=>{
-            item.setAttribute("disabled","true");
-          })
-          document.querySelector('button.btn').style.display = 'none';
-          console.log(document.querySelector('button.btn').style);
-        }else{
-          document.querySelector('.redirect').style.display = 'none';
-        }
+        // console.log(window.location.href);
+        // console.log(window.location.href.search('predict'));
+        // if(window.location.href.search('predict') == -1){
+        //   document.querySelectorAll('input').forEach((item)=>{
+        //     item.setAttribute("disabled","true");
+        //   })
+        //   document.querySelectorAll('select').forEach((item)=>{
+        //     item.setAttribute("disabled","true");
+        //   })
+        //   document.querySelector('button.btn').style.display = 'none';
+        //   console.log(document.querySelector('button.btn').style);
+        // }else{
+        //   document.querySelector('.redirect').style.display = 'none';
+        // }
     </script>
   </body>
 </html>
