--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../static/style.css" />
   </head>
   <body>
-    <h1>Check Your Insurance Premium</h1>
+    <h1>Check Your Health Insurance Premium</h1>
     <form action="/predict" method="POST">
       <label>
         <div class="row ">
