--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
       </label>
       <label>
         <div class="row ">
-          <div class="col-2">Bmi</div>
+          <div class="col-2">BMI</div>
           <div class="col-6">
             <input type="number" name="bmi" min="0" step="0.1" required>
           </div>
